--- a/MCQPuzzleGame.csproj
+++ b/MCQPuzzleGame.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="EFCore.BulkExtensions" Version="5.0.0" />
-    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.8" />
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.4" />
